--- a/mandelbulber2/formula/ui/sphere_cluster.ui
+++ b/mandelbulber2/formula/ui/sphere_cluster.ui
@@ -983,7 +983,7 @@ offset:</string>
         <property name="text">
          <string notr="true">&lt;p&gt;formula by TGlad,&lt;br&gt;https://fractalforums.org/fractal-mathematics-and-new-theories/28/fractal-clusters/5107&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/sphereCluster 2p55 sym.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/sphereCluster clip.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
